--- a/weatherWidget.css
+++ b/weatherWidget.css
@@ -1,4 +1,33 @@
-
-.weather-widget .day .date{
-    border: 1px solid red;
+.weather-widget .day-list {
+    padding-top: 30px;
+    display: flex; 
+    flex-direction: row;
+    column-gap: 10px;
+    background-color: lightblue;
+    padding-bottom: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.day{
+    background-color: whitesmoke;
+    padding: 4px;
+}
+.weather-widget .day-list .date {
+  font-size: larger;
+  text-align: center;
+}
+.temp {
+    font-size: larger;
+    text-align: center;
+}
+.input-box{
+    padding-bottom: 10px;
+    padding-right: 10px;
+}
+.button-box{
+    margin-left: 5px;
+    padding-left: 5px;
+}
+.input-section{
+    display: flex;
 }
